Update new resume
Edited code to refer to new resume

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Resume</h5>
                             <p class="card-text">Take a look at my resume below!</p>
-                            <a style="color: #de388a;" target="_blank" href="asset/Resume.pdf" class="btn btn-warning">Download My Resume!</a>
+                            <a style="color: #de388a;" target="_blank" href="asset/Resume_Deepa.pdf" class="btn btn-warning">Download My Resume!</a>
                         </div>
                     </div>
                 </div>
