Updated skills list
Included Marker in the list

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="skill-card skill-card--full">
                 <h3>Tools & Workflow</h3>
                 <ul>
-                    n8n, Git, Codecademy (continuous learning)
+                    n8n, Marker, Git, Codecademy (continuous learning)
                 </ul>
                 </div>
             </section>
